@@ -2,6 +2,8 @@
 
 	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
 	that the video "2022yttranscript" (now) has subtitles.
+	(ee-1stclassvideos-info): added an indication that the video
+	"2021workshop3" (now) has subtitles.
 
 2022-12-31  Eduardo Ochs  <eduardoochs@gmail.com>
 
